# ansible-role-dotfiles

./: .ansible-lint  CHANGELOG.md  Makefile  README.md  package.json  pyproject.toml  requirements.yml
.github/workflows/: ci.yml  release-please.yml
defaults/: main.yml
meta/: main.yml
molecule/_partials/tasks/: setup.yml
tasks/: configure.yml  install-chezmoi.yml  install-linux.yml  install-mac.yml  install.yml  main.yml  pre-facts.yml
tasks/_partials/: install-linux.yml  install-mac.yml
tests/: test.yml
vars/: main.yml
